Connect backend to SQLite