@@ -1,3 +1,3 @@
 @echo off
-javac JavaBackend.java
-java JavaBackend
+javac -cp "lib/*" JavaBackend.java
+java --enable-native-access=ALL-UNNAMED -cp ".;lib/*" JavaBackend
